# RagMate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  docker-compose.yml
backend/: .env.example  agent.py  alembic.ini  app.py  chat.py  cli.py  config.py  database.py  document_service.py  errors.py  eval_cli.py  ingest.py  ingest_manager.py  main.py  model_factory.py  models.py  pyproject.toml  rate_limiter.py  redis_client.py  retriever.py  schemas.py  source_utils.py  streaming_llm.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: chat.py  deps.py  documents.py  health.py  ingest.py
backend/application/: chat.py  document_service.py  ingest_manager.py
backend/application/ingest/: __init__.py  db_sync.py  loaders.py  pipeline.py
backend/core/: agent.py  retriever.py
backend/core/prompts/: researcher.md
backend/domain/: errors.py  models.py  schemas.py
backend/eval/: __init__.py  cli.py  dataset.json  document_loader.py  interactive.py  metrics.py  report.py  response_gen.py  retrieval.py  runner.py  testset_gen.py  utils.py
backend/infrastructure/: config.py  database.py  encoding.py  milvus.py  model_factory.py  rate_limiter.py  redis_client.py  streaming_llm.py
backend/ingest/: __init__.py  db_sync.py  encoding.py  loaders.py  milvus_ops.py  pipeline.py
backend/prompts/: researcher.md
backend/routes/: chat.py  documents.py  health.py  ingest.py
backend/tests/: conftest.py  test_filter_and_dedup.py
docs/superpowers/plans/: 2026-05-18-ragas-eval.md
docs/superpowers/specs/: 2026-05-18-ragas-eval-design.md
frontend/: app.js  index.html  style.css
