[project]
name = "ragmate"
version = "0.6.0"
description = "RAG application with agentic workflow"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-milvus>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "torch>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-litellm>=0.1.0",
    "deepagents>=0.5.0",
    "pydantic-settings>=2.0.0",
    "pymilvus>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",
    "FlagEmbedding>=0.1.0",
    "sentence-transformers>=2.2.0",
    "docx2txt>=0.8",
    "unstructured>=0.12.0",
    "openpyxl>=3.1.0",
    "msoffcrypto-tool>=4.12.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
study = [
    "bilibili-api-python>=17.0.0",
]

[tool.setuptools]
py-modules = [
    "agent",
    "chat",
    "cli",
    "config",
    "database",
    "document_service",
    "errors",
    "ingest",
    "main",
    "models",
    "model_factory",
    "redis_client",
    "retriever",
    "streaming_llm",
]