[project]
name = "ragmate"
version = "0.8.0"
description = "RAG application with agentic workflow"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0,<0.4.0",
    "langchain-community>=0.2.0,<0.4.0",
    "langchain-text-splitters>=0.2.0,<1.0.0",
    "langchain-milvus>=0.1.0,<1.0.0",
    "langchain-huggingface>=0.1.0,<1.0.0",
    "torch>=2.0.0,<3.0.0",
    "langchain-openai>=0.2.0,<0.4.0",
    "deepagents>=0.5.0",
    "pydantic-settings>=2.0.0",
    "pymilvus>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",
    "FlagEmbedding>=0.1.0",
    "sentence-transformers>=2.2.0",
    "docx2txt>=0.8",
    "unstructured>=0.12.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2.0",
    "tqdm>=4.65.0",
]

[project.scripts]
ragmate-eval = "backend.eval.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "backend",
    "backend.api",
    "backend.application",
    "backend.application.ingest",
    "backend.core",
    "backend.domain",
    "backend.eval",
    "backend.infrastructure",
]

[tool.setuptools.package-dir]
backend = "."

[tool.setuptools.package-data]
backend = ["core/prompts/*.md"]
